[gd_scene load_steps=20 format=3 uid="uid://crsngq58kov20"]

[ext_resource type="Texture2D" uid="uid://b2x1ct26rydyq" path="res://assets/snowysky.png" id="1_6rf6b"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ol0jg"]
[ext_resource type="Shader" path="res://scripts/water.gdshader" id="2_ay0dc"]
[ext_resource type="Texture2D" uid="uid://bknh7ot71x1sb" path="res://assets/ocean.png" id="3_5wgba"]
[ext_resource type="Texture2D" uid="uid://dusdhudp8afwk" path="res://assets/FISHING GAME logo_normal.png" id="3_wytng"]
[ext_resource type="FontFile" uid="uid://kg2w0sgacegs" path="res://assets/fonts/8bitoperator_jve.ttf" id="5_85sam"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_if7sq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cf1q8"]
shader = ExtResource("2_ay0dc")
shader_parameter/amplitude_px = 2.0
shader_parameter/period = 2.2
shader_parameter/travel_speed_cols = 96.0
shader_parameter/wrap_vertical = false
shader_parameter/highlight_strength = 0.08
shader_parameter/highlight_width_cols = 6.0
shader_parameter/highlight_speed_cols = 120.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcnia"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lkb0"]
bg_color = Color(0, 0, 0, 0.792157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nfd2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_usl8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PatchNotes:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PatchNotes:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PatchNotes:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(387, 88)]
}

[sub_resource type="Animation" id="Animation_vkw3j"]
resource_name = "close"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PatchNotes:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PatchNotes:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qmtsl"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PatchNotes:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PatchNotes:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.435275, 0.189465),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PatchNotes:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 0.392292),
"update": 0,
"values": [Vector2(387, 150), Vector2(387, 88)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a406j"]
_data = {
"RESET": SubResource("Animation_usl8g"),
"close": SubResource("Animation_vkw3j"),
"open": SubResource("Animation_qmtsl")
}

[sub_resource type="Animation" id="Animation_065c8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e8ohe"]
resource_name = "enter"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7m546"]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_scene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j42do"]
_data = {
"RESET": SubResource("Animation_065c8"),
"enter": SubResource("Animation_e8ohe"),
"exit": SubResource("Animation_7m546")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ol0jg")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6rf6b")

[node name="TitleHolder" type="Control" parent="Control"]
custom_minimum_size = Vector2(960, 336)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -480.0
offset_top = 69.0
offset_right = 480.0
offset_bottom = 405.0
grow_horizontal = 2

[node name="Sprite2D" type="Sprite2D" parent="Control/TitleHolder"]
scale = Vector2(6, 6)
texture = ExtResource("3_wytng")
centered = false

[node name="WaterHolder" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -959.0
offset_top = -151.0
offset_right = 977.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_if7sq")

[node name="Sprite2D" type="Sprite2D" parent="Control/WaterHolder"]
self_modulate = Color(0.540262, 0.861886, 0.960313, 1)
material = SubResource("ShaderMaterial_cf1q8")
position = Vector2(-3, -11)
scale = Vector2(6.06995, 5.125)
texture = ExtResource("3_5wgba")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -113.0
offset_right = 201.0
offset_bottom = 332.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PlayButton" type="Button" parent="Control/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_85sam")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/hover = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal = SubResource("StyleBoxFlat_mcnia")
text = "Start"

[node name="SettingsButton" type="Button" parent="Control/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_85sam")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/hover = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal = SubResource("StyleBoxFlat_mcnia")
text = "Settings"

[node name="ExtraButton" type="Button" parent="Control/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_85sam")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/hover = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal = SubResource("StyleBoxFlat_mcnia")
text = "Extra"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_85sam")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/hover = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal = SubResource("StyleBoxFlat_mcnia")
text = "Quit"

[node name="PatchNotesButton" type="Button" parent="Control"]
texture_filter = 1
custom_minimum_size = Vector2(300, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -339.0
offset_top = 33.0
offset_right = -39.0
offset_bottom = 113.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("5_85sam")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/hover = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal = SubResource("StyleBoxFlat_mcnia")
text = "Patch Notes"

[node name="PatchNotes" type="PanelContainer" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -573.0
offset_top = -452.0
offset_right = 573.0
offset_bottom = 13706.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1lkb0")

[node name="MarginContainer" type="MarginContainer" parent="Control/PatchNotes"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PatchNotes/MarginContainer"]
layout_mode = 2

[node name="NewContent" type="RichTextLabel" parent="Control/PatchNotes/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("5_85sam")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "New Content:"
fit_content = true

[node name="PATCHNOTES" type="RichTextLabel" parent="Control/PatchNotes/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 9
theme_override_fonts/normal_font = ExtResource("5_85sam")
theme_override_font_sizes/normal_font_size = 48
text = "Version Alpha 1.2

* Added lure upgrades which you can apply to your rod to get more lucky with catching fish
* Added Wyatt the Wizard
* Added \"Sell Everything\" Button To Shop
* Fixed aspect ratio bug
* Fixed bugs
* Improved the virus that steals your bank account info :DD"
fit_content = true

[node name="HFlowContainer" type="HFlowContainer" parent="Control/PatchNotes/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="BackButtonPatch" type="Button" parent="Control/PatchNotes/MarginContainer/VBoxContainer/HFlowContainer"]
texture_filter = 1
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("5_85sam")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/hover = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mcnia")
theme_override_styles/normal = SubResource("StyleBoxFlat_mcnia")
text = "Back"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 12.0
offset_right = 236.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 24
text = "V Alpha 1.2"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3nfd2")

[node name="PatchNotesAnim" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_a406j")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j42do")
}

[connection signal="pressed" from="Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ExtraButton" to="." method="_on_extra_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/PatchNotesButton" to="." method="_on_patch_notes_button_pressed"]
[connection signal="pressed" from="Control/PatchNotes/MarginContainer/VBoxContainer/HFlowContainer/BackButtonPatch" to="." method="_on_back_button_patch_pressed"]
